--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@phosphor-icons/react": "^2.1.6",
     "axios": "1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-loader-spinner": "5.3.4",
     "react-router-dom": "^6.24.0",
     "react-toastify": "9.1.2"
