--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "5.3.4",
     "react-router-dom": "^6.24.0",
-    "react-toastify": "9.1.2"
+    "react-toastify": "9.1.2",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
