--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "5.3.4",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "9.1.2",
-    "reactjs-popup": "^2.0.6"
+    "reactjs-popup": "^2.0.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
