--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "5.3.4",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "9.1.2",
-    "reactjs-popup": "^2.0.6"
+    "reactjs-popup": "^2.0.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
